--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,48 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
+
+    <packaging>jar</packaging>
+
+    <distributionManagement>
+        <repository>
+            <id>4undEinKeksDestroyer-release-repo</id>
+            <name>4 und ein Keks Destroyer</name>
+            <url>file://${project.build.directory}/mvn-repo/release</url>
+        </repository>
+        <snapshotRepository>
+            <id>4undEinKeksDestroyer-snapshot-repo</id>
+            <name>4 und ein Keks Destroyer</name>
+            <url>file://${project.build.directory}/mvn-repo/snapshot</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
